Refac : SettingMenu MVC 패턴 적용 및 리팩토링